--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -57,10 +57,10 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.4f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\manager.cs" />
+    <Compile Include="Assets\Scripts\manager.cs" />
+    <Compile Include="Assets\Scripts\FlyingObject.cs" />
     <Compile Include="Assets\Scripts\MouseLook.cs" />
     <Compile Include="Assets\Scripts\Menu.cs" />
-    <Compile Include="Assets\FlyingObject.cs" />
     <Compile Include="Assets\Scripts\PlayerMovement.cs" />
   </ItemGroup>
   <ItemGroup>
